# ml-housing-project

./: .dockerignore  .env.example  .gitignore  READ.ME  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: ci.yml
.github/workflows/: ci.yml
artifacts/: metrics.json
backend/: Dockerfile  app.py  requirements.txt
backend/services/: ab_router.py  experiment_logger.py  model_registry.py
backend/storage/: hf_client.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
logs/: ab_predictions.jsonl
notebook/: 02_train_ab_models.ipynb  02_train_and_version.ipynb  03_ab_analysis.ipynb
scripts/: check_project_structure.py  generate_ab_traffic.py  test_ab_router_manual.py  upload_model_to_hf.py
src/ml_project/: config.py  data.py  features.py  pipeline.py  preprocessing.py  train.py
src/ml_project/prediction/: schemas.py
tests/: test_ab_router.py  test_api_ab.py  test_data.py  test_features.py  test_pipeline.py  test_preprocessing.py  test_project_structure.py
