[project]
dependencies = [
    "pandas",
    "scikit-learn",
    "joblib",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "S"]
ignore = ["N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
targets = ["src"]
exclude_dirs = [".venv", "venv"]